--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">app</string>
+    <string name="title_home">Home</string>
+    <string name="title_humors">humors</string>
+    <string name="title_mypage">mypage</string>
 </resources>
