YTG-#6 [디자인][리소스] app_name 아재트로 변경

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">app</string>
+    <string name="app_name">아재트</string>
     <string name="title_home">Home</string>
     <string name="title_humors">humors</string>
     <string name="title_mypage">mypage</string>
