YTG-#9 [로그인][세팅] 로그엔 페이지 초기 세팅

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_home">Home</string>
     <string name="title_humors">humors</string>
     <string name="title_mypage">mypage</string>
+    <string name="title_login">login</string>
 </resources>
