--- a/features/main/src/main/res/values/strings.xml
+++ b/features/main/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="count">%1$d개</string>
+    <string name="humor_count_text">더 작성하면 등급업!</string>
+    <string name="humors_list_title">개그 목록</string>
 </resources>
