--- a/features/mypage/src/main/res/values/strings.xml
+++ b/features/mypage/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="user_name"><b>신입</b> 웅웅님</string>
 </resources>
