--- a/features/login/src/main/res/values/strings.xml
+++ b/features/login/src/main/res/values/strings.xml
@@ -4,8 +4,9 @@
 
     <string name="id_placeholder">아이디</string>
     <string name="password_placeholder">비밀번호</string>
-    <string name="forgot_password">비밀호 찾기</string>
+    <string name="forgot_password">비밀번호 찾기</string>
 
     <string name="login_button">로그인</string>
     <string name="signin_button">회원가입</string>
+    <string name="guest_login">게스트로 서비스 구경하기</string>
 </resources>
