YTG-#9 [회원가입][세팅] 회원가입 페이지 초기 설정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_humors">humors</string>
     <string name="title_mypage">mypage</string>
     <string name="title_login">login</string>
+    <string name="title_signup">signup</string>
 </resources>
