--- a/features/details/src/main/res/values/strings.xml
+++ b/features/details/src/main/res/values/strings.xml
@@ -1,4 +1,3 @@
 <resources>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="count">%1$d개</string>
 </resources>
