--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_humors">humors</string>
     <string name="title_mypage">mypage</string>
     <string name="title_alarm">alarm</string>
+    <string name="title_details">details</string>
 </resources>
