--- a/features/main/src/main/res/values/strings.xml
+++ b/features/main/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
+    <string name="post">게시글</string>
+    <string name="comment">댓글</string>
     <string name="count">%1$d개</string>
     <string name="humor_count_text">더 작성하면 등급업!</string>
     <string name="humors_list_title">개그 목록</string>
