--- a/features/login/src/main/res/values/strings.xml
+++ b/features/login/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="login_button">로그인</string>
     <string name="signin_button">회원가입</string>
     <string name="guest_login">게스트로 서비스 구경하기</string>
+    <string name="forgot_password_mail">dudrnxps1@gmail.com</string>
+    <string name="forgot_password_guide_text">여기로 문의 부탁. 5초 안에 찾아드림 ㅎ</string>
 </resources>
