Feature #9/login signin splash (#18)
* YTG-#9 [로그인][세팅] 로그엔 페이지 초기 세팅

* YTG-#9 [로그인][화면 개발] 로그인 화면 개발

* YTG-#9 [로그인][뷰] 로그인 페이지 뷰 개발

- 임시로 dp값 조정
- %로 변경 필요

* YTG-#9 [회원가입][세팅] 회원가입 페이지 초기 설정

* YTG-#9 [회원가입][레이아웃] 회원가입 뷰 개발

* YTG-#9 [회원가입][레이아웃] 회원가입 버튼 추가

* YTG-#9 [로그인][레이아웃] 레이아웃 개선

* YTG-#9 [로그인][페이지 이동] 로그인 to 회원가입 기능 개발

- 로그인에서 회원가입 페이지 이동 개발
- 로그인 데이타바인딩 진행

* YTG-#9 [회원가입][페이지 이동] 회원가입 페이지 유효성 체크 개발

- 양방향 데이터 바인딩

* YTG-#9 [병합][에러수정] 병합 후 에러 수정

* YTG-#9 [스플래시][스플래시작업] 스플래시 기능 추가

* YTG-#9 [툴바][아이콘변경] 툴바 아이콘 변경

* YTG-#9 [툴바][텍스트 변경] 텍스트 위치 및 크기 변경

* YTG-#9 [회원가입][유효성체크] 유효성 체크 개선

* YTG-#22 [에러체크][코드정리] 사용하지 않는 테스트 코드 제거

* YTG-#22 [에러체크][코드정리] Data 클래스 명칭 변경

* YTG-#22 [회원가입][유효성체크] 유효성 체크 로직 개선

* YTG-#22 [병합][충돌해결] 병합 후 충돌 해결

* YTG-#22 [비밀번호찾기][페이지 개발] 비밀번호 찾기 페이지 개발 및 연결

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
     <string name="title_main">main</string>
     <string name="title_humors">humors</string>
     <string name="title_mypage">mypage</string>
+    <string name="title_login">login</string>
+    <string name="title_signup">signup</string>
     <string name="title_alarm">alarm</string>
     <string name="title_create">create</string>
     <string name="title_details">details</string>
