--- a/features/mypage/src/main/res/values/strings.xml
+++ b/features/mypage/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
 <resources>
     <string name="user_rating">신입</string>
     <string name="user_nickname">웅웅님</string>
+    <string name="my_page_setting">설정</string>
+    <string name="my_page_bookmark">북마크</string>
+    <string name="my_page_comment">작성댓글</string>
+    <string name="my_page_humor">작성개그</string>
 </resources>
