--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="title_alarm">alarm</string>
     <string name="title_create">create</string>
     <string name="title_details">details</string>
+    <string name="toolbar_sign_up_button">아제트 가입하기</string>
 </resources>
