YTG-#61 [마이페이지][탭별 아이템] 버그 수정
- 내 정보 (이름, 등급 가져오기) 추가
- 레이아웃 수정

--- a/features/mypage/src/main/res/values/strings.xml
+++ b/features/mypage/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="my_page_bookmark">북마크</string>
     <string name="my_page_comment">작성댓글</string>
     <string name="my_page_humor">작성개그</string>
+    <string name="count">%1$d개</string>
 </resources>
