--- a/features/signup/src/main/res/values/strings.xml
+++ b/features/signup/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="signup_duplicate_check">중복확인</string>
+    <string name="signup_duplicate_check_complete">확인완료</string>
     <string name="signup_id">아이디</string>
     <string name="signup_password">패스워드 최대 8자 입력</string>
     <string name="signup_password_check">패스워드 확인</string>
